force-app/main/default/objects/DD_Product_Catalog__c/DD_Product_Catalog__c.object-meta.xml
<CustomObject>
    <description>Master catalog version container enabling versioned product releases</description>
    <label>Product Catalog</label>
    <nameField><label>Product Catalog Name</label><type>Text</type></nameField>
    <pluralLabel>Product Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>