force-app/main/default/objects/DD_Product_Catalog__c/fields/Catalog_Name__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Name__c</fullName>
    <label>Catalog Name</label>
    <type>Text</type>
    <length>100</length><required>true</required><unique>true</unique><externalId>true</externalId>
    <description>Unique catalog name e.g. Delta Dental California 2025</description>
</CustomField>