force-app/main/default/objects/DD_Product_Catalog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>false</default><label>Draft</label></value><value><fullName>Active</fullName><default>false</default><label>Active</label></value><value><fullName>Retired</fullName><default>false</default><label>Retired</label></value></valueSetDefinition></valueSet>
    <description>Catalog lifecycle status</description>
</CustomField>