force-app/main/default/objects/DD_Product_Catalog__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Text</type>
    <length>20</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Catalog version identifier</description>
</CustomField>