force-app/main/default/objects/DD_Product_Catalog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>Catalog_Name__c</columns>
    <columns>Version__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
</ListView>